<resources>
    <string name="app_name">IDareYouToBeAwesome</string>

    <string name="btn_dummy">Dummy</string>
    <string name="btn_ac_login_facebook">Iniciar sesión con Facebook</string>
    <string name="btn_ac_login_twitter">Iniciar sesión con Twitter</string>
    <string name="btn_ac_login_google">Iniciar sesión con Google</string>
    <string name="btn_ac_login_email">Registrarse con Email</string>

    <string name="error_dummy">Dummy</string>

    <string name="hint_dummy">Dummy</string>
    <string name="hint_ac_register_email">Correo electronico</string>
    <string name="hint_ac_register_password">Contraseña</string>
    <string name="hint_ac_register_password_confirm">Confirmar Contraseña</string>

    <string name="legend_dummy">Dummy</string>
    <string name="legend_login_anonymous">Continuar sin iniciar sesión</string>

    <string name="msg_dummy">Dummy</string>

    <string name="text_dummy">Dummy</string>
    <string name="text_lorem">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</string>
    <string name="text_about_us">About us…</string>

    <string name="title_dummy">Dummy</string>
    <string name="title_splash">I Dare you…</string>
</resources>
