<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:gravity="center|bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/vector_awesome" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/acb_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/blue_facebook"
        android:text="@string/btn_ac_login_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/acb_login_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/blue_twitter"
        android:text="@string/btn_ac_login_twitter"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/acb_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/red_google"
        android:text="@string/btn_ac_login_google"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/acb_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/btn_ac_login_email"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_login_anonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/legend_login_anonymous"
        android:textColor="@color/blue_500" />
</LinearLayout>